# SteamToolPlus

./: .gitattributes  .gitignore  App.xaml  App.xaml.cs  FileLogger.cs  GITHUB_GUIDE.md  GitHub Desktop 指南.md  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  QUICK_START.md  README.md  README_EN.md  SteamToolPlus.csproj  SteamToolPlus.sln  build.bat  index.html  package-lock.json  package.json  run.bat  settings.html  tailwind.config.js  tsconfig.json  vite.config.ts  打包.bat
.github/workflows/: build.yml
Models/: PatchGameConfig.cs
OpenSteam-3.0.0/: App.xaml  OpenSteam.csproj  README.md
OpenSteam-3.0.0/CLI/: OpenSteam.ps1
OpenSteam-3.0.0/Properties/: launchSettings.json
OpenSteam-3.0.0/Services/: Attach.cs  LuaLoaders.cs  Plugins.cs  SteamUtils.cs  Update.cs
OpenSteam-3.0.0/Views/: Extra.xaml  Information.xaml  InitialMessage.xaml  LibrarySteam.xaml  MainWindow.xaml  NotificationWindow.xaml  OnlineByPass.xaml  OnlineLua.xaml
Resources/: games_config.json
resources/: README.md
src/: App.vue  main.ts  router.ts  settings-main.ts  shims-vue.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: config.json
src-tauri/icons/: README.md  generate-icons.ps1  icon.icns
src-tauri/src/: lib.rs  lib.rs.lnk  main.rs
src-tauri/src/commands/: background_commands.rs  cache_commands.rs  config_commands.rs  denuvo_commands.rs  download_commands.rs  extension_commands.rs  fake_imported_commands.rs  game_commands.rs  game_data_commands.rs  help_commands.rs  log_commands.rs  manifest_commands.rs  mod.rs  opensteamtool_commands.rs  patch_commands.rs  tool_commands.rs  window_commands.rs
src-tauri/src/commands/patch_commands/: app_groups.rs  audio_visual.rs  common.rs  config_core.rs  depots_branches.rs  dlc_network.rs  file_ops.rs  game_features.rs  http_items.rs  misc_config.rs  mod.rs  patch_apply.rs  patch_state.rs  steamless.rs  tools.rs
src-tauri/src/models/: cache.rs  config.rs  denuvo.rs  extension.rs  game.rs  mod.rs  patch_state.rs  steam_config.rs  window.rs
src-tauri/src/security/: mod.rs  permission.rs  sandbox.rs
src-tauri/src/services/: cache_service.rs  config_service.rs  download_service.rs  extension_service.rs  fake_imported_service.rs  game_data_service.rs  game_service.rs  image_service.rs  mod.rs  opensteamtool_service.rs  patch_service.rs  seven_z_service.rs  window_service.rs
src-tauri/src/utils/: config_file.rs  config_path_utils.rs  file_utils.rs  ini_parser.rs  log_utils.rs  mod.rs  path_utils.rs  platform.rs  resource_utils.rs
src/api/: api-wrapper.ts  background.api.ts  config.api.ts  download.api.ts  extension.api.ts  game.api.ts  gameData.api.ts  help.api.ts  index.ts  window.api.ts
src/components/: ErrorBoundary.vue
src/composables/: useAutoSave.ts  useDownloadProgress.ts
src/constants/: config-events.ts  game.ts
src/hooks/: useDownloadProgress.ts
src/i18n/: en-US.json  index.ts  zh-CN.json
src/router/: index.ts
src/services/: error-message.service.ts  imageCache.service.ts
src/store/: config.store.ts  download.store.ts  extension.store.ts  game.store.ts  index.ts  store-utils.ts  theme.store.ts  window.store.ts
src/stores/: games.ts  theme.ts
src/styles/: index.css  main.css
src/types/: api.types.ts  background.types.ts  config.types.ts  download.types.ts  extension.types.ts  game.types.ts  index.ts  steam-config.types.ts  window.types.ts
src/utils/: async-helper.ts  date.ts  error-handler.ts  file-helper.ts  index.ts  logger.ts  path.ts  performance.ts  string.ts
src/views/: About.vue  Browse.vue  CoverDownloader.vue  Download.vue  GameDetail.vue  GameDownload.vue  GameList.vue  GlobalSettings.vue  Library.vue  ManifestImport.vue  Patch.vue  Personalization.vue  SettingsWindow.vue  SteamPatchInject.vue  Troubleshooting.vue  UpdateCheck.vue  VdfToLua.vue
(+214 files in other folders)
