[package]
name = "steam-tool-plus"
version = "1.11.0"
description = "Steam Tool Plus - 本地游戏管理系统"
authors = ["Steam Tool Plus"]
edition = "2021"
rust-version = "1.77.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Tauri核心依赖
tauri = { version = "2.0.0", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-single-instance = "2.0.0"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 单例管理
once_cell = "1.19"

# 7z解压
sevenz-rust = "0.6"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
log = "0.4"
env_logger = "0.11"

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 文件系统监控
notify = "6.0"

# 路径处理
path-absolutize = "3.0"

# Base64编码
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# 发布优化配置
[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 16
strip = true
panic = "unwind"
