[package]
name = "steam-tool-plus"
version = "1.25.1"
description = "Steam Tool Plus - 本地游戏管理系统"
authors = ["Steam Tool Plus"]
edition = "2021"
rust-version = "1.77.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Tauri核心依赖
tauri = { version = "2.0.0", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-single-instance = "2.0.0"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时（仅启用必要特性）
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "time"] }

# 单例管理
once_cell = "1.19"

# 7z解压
sevenz-rust = "0.6"

# 日志
log = "0.4"
env_logger = "0.11"

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# Base64编码（游戏封面图片处理）
base64 = "0.22"

# HTTP客户端（Steam封面图下载）
reqwest = { version = "0.12", features = ["json"] }
bytes = "1.0"

# 正则表达式（Lua/VDF转换、清单文件解析）
regex = "1.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# 发布优化配置 - 极致体积优化
[profile.release]
opt-level = "z"          # 优化体积（比 "s" 更激进）
lto = true               # 启用完整链接时优化
codegen-units = 1        # 单代码生成单元，最大化优化
strip = true             # 剥离符号表
panic = "abort"          #  panic 时直接中止，减少代码量

